name:                gtin
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/hapytex/gtin#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexeu+gh@gmail.com
copyright:           2023 HaPyTeΧ
category:            finance
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Data.Trade.GTIN
  build-depends:
      base >= 4.7 && < 5
    , binary >= 0.2
    , ghc-prim >= 0.5
    , hashable >= 1.0
    , parsec >=3.0
    , QuickCheck >=2.1
    , validity >= 0.4.0.0
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-home-modules
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/hapytex/gtin
